# python-project-template

./: .gitignore  .prettierignore  .prettierrc  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  sitemap.xml  versions.json  zensical.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/actions/build-docs/: action.yml
.github/actions/build-mkdocs/: action.yml
.github/actions/create-release/: action.yml
.github/actions/lint-code/: action.yml
.github/actions/obtain-version/: action.yml
.github/actions/security/: action.yml
.github/actions/setup-python-env/: action.yml
.github/actions/test-code/: action.yml
.github/workflows/: mr_workflow.yaml  workflow.yaml  workflow.yml
content/: content.html
docs/: .nav.yml  index.md
docs/assets/css/: custom.css
docs/content/: ci-cd.md  content.md  cookiecutter.md  makefile-commands.md  overview.md  pre-commit-hooks.md  pyproject-configuration.md
hooks/: post_gen_project.py
search/: search_index.json
src/: __init__.py  example.py  version.py
src/tests/: test_example.py
src/utils/: utils.py
tests/: conftest.py  test_cookiecutter_template.py  test_post_gen_project.py
v2.3.2/: 404.html  index.html  sitemap.xml
v2.3.2/content/: content.html
v2.3.3/: 404.html  index.html  sitemap.xml
v2.3.3/content/: content.html
v2.3.3/search/: search_index.json
v2.4.0/: 404.html  index.html  sitemap.xml
v2.4.0/content/: content.html
v2.4.0/search/: search_index.json
v2.4.1/: 404.html  index.html  sitemap.xml
v2.4.1/content/: content.html
v2.4.2/: 404.html  index.html  sitemap.xml
v2.4.2/content/: content.html
v2.4.3/: 404.html  index.html  objects.inv  sitemap.xml
v2.4.3/content/: content.html
v2.4.5/: 404.html  index.html  sitemap.xml
v2.4.5/content/: content.html
v2.4.5/search/: search_index.json
v2.4.6/: 404.html  index.html  sitemap.xml
v2.4.6/content/: content.html
v2.4.6/search/: search_index.json
v2.4.7/: 404.html  index.html  sitemap.xml
v2.4.7/content/: content.html
v2.4.8/: 404.html  index.html  sitemap.xml
v2.4.8/content/: content.html
v2.4.8/search/: search_index.json
v2.5.0/: 404.html  index.html  sitemap.xml
v2.5.0/content/: content.html
v2.5.0/search/: search_index.json
v2.5.1/: 404.html  index.html  sitemap.xml
v2.5.1/content/: ci-cd.html  cookiecutter.html  makefile-commands.html  overview.html  pre-commit-hooks.html  pyproject-configuration.html
v2.5.1/search/: search_index.json
v2.6.0/: 404.html  index.html  sitemap.xml
v2.6.0/content/: ci-cd.html  cookiecutter.html  makefile-commands.html  overview.html  pre-commit-hooks.html  pyproject-configuration.html
v2.6.0/search/: search_index.json
v2.6.1/: 404.html  index.html  sitemap.xml
v2.6.1/content/: ci-cd.html  cookiecutter.html  makefile-commands.html  overview.html  pre-commit-hooks.html  pyproject-configuration.html
v2.6.1/search/: search_index.json
v2.6.2/: 404.html  index.html  sitemap.xml
v2.6.2/content/: ci-cd.html  cookiecutter.html  makefile-commands.html  overview.html  pre-commit-hooks.html  pyproject-configuration.html
v2.7.0/: 404.html  index.html  sitemap.xml
v2.7.0/content/: ci-cd.html  cookiecutter.html  makefile-commands.html  overview.html  pre-commit-hooks.html  pyproject-configuration.html
v2.7.0/search/: search_index.json
v3.0.0/: 404.html  index.html  search.json  sitemap.xml
v3.0.0/content/ci-cd/: index.html
v3.0.0/content/cookiecutter/: index.html
v3.0.0/content/makefile-commands/: index.html
v3.0.0/content/overview/: index.html
v3.0.0/content/pre-commit-hooks/: index.html
v3.0.0/content/pyproject-configuration/: index.html
{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  zensical.toml
{{ cookiecutter.project_name }}/.devcontainer/: devcontainer.json  setup.sh
{{ cookiecutter.project_name }}/.github/: CONTRIBUTING.md
{{ cookiecutter.project_name }}/.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
{{ cookiecutter.project_name }}/.github/actions/build-mkdocs/: action.yml
{{ cookiecutter.project_name }}/.github/actions/lint-code/: action.yml
{{ cookiecutter.project_name }}/.github/actions/security/: action.yml
{{ cookiecutter.project_name }}/.github/actions/test-code/: action.yml
{{ cookiecutter.project_name }}/.github/workflows/: workflow.yaml  workflow.yml
{{ cookiecutter.project_name }}/config/: json_configuration.json
{{ cookiecutter.project_name }}/docs/: .nav.yml
{{ cookiecutter.project_name }}/docs/assets/css/: custom.css
{{ cookiecutter.project_name }}/prompts/: create_diagrams.md  create_documentation.md  docstrings.md  improve_documentation.md  production_code.md
{{ cookiecutter.project_name }}/{{ cookiecutter.project_module_name }}/: __init__.py  version.py
{{ cookiecutter.repo_name }}/: pyproject.toml
{{ cookiecutter.repo_name }}/docs/content/: content.md
