[project]
name = "python-project-template"
version = "3.0.0"
description = "Python project template"
authors = [
    {name = "Daniel Bazo Correa", email = "none@none.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "template"]
dependencies = [
    "cookiecutter==2.7.1",
]

[tool.uv]
default-groups = "all"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]
environments = [
    "sys_platform == 'linux'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[dependency-groups]
pipeline = [
    "complexipy==6.0.0",
    "mypy==2.1.0",
    "ruff==0.15.20",
    "isort==8.0.1",
    "pytest==9.1.1"
]
documentation = [
    "zensical==0.0.46",
    "mike @ git+https://github.com/squidfunk/mike.git",
]

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = ["*.ipynb", "[{][{] cookiecutter.project_name [}][}]"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = [
    "^(build|dist|venv)",
    ".venv/",
    "{{ cookiecutter.project_name }}",
]
cache_dir = "/dev/null"

[tool.complexipy]
exclude = ["{{ cookiecutter.project_name }}"]

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard libraries"
import_heading_thirdparty = "3pps"
import_heading_firstparty = "Own modules"
import_heading_localfolder = "Own modules"
line_length = 88
include_trailing_comma = true
combine_as_imports = true
skip_glob = [".venv/*", ".uv-cache/*", "{{ cookiecutter.project_name }}/*"]
