[build-system]
requires = ["setuptools >=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
dynamic = ["version"]
description = "{{ cookiecutter.project_short_description }}"
authors = [
    {name = "{{ cookiecutter.project_authors }}", email = "{{ cookiecutter.project_authors_email }}"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">={{ cookiecutter.project_version_python }}"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[tool.uv]
default-groups = "all"

[dependency-groups]
documentation = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs-material>=9.6.10",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-git-authors-plugin>=0.9.4",
    "mkdocs-enumerate-headings-plugin>=0.6.2",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-awesome-nav",
]
pipeline = [
    "bandit>=1.8.3",
    "complexipy>=2.1.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-order>=1.3.0",
    "ruff>=0.11.8",
    "isort>=6.0.1",
]

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.project_module_name }}*"]
exclude = ["docs*", "*.egg-info*"]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.project_module_name }}.__version__"}

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 79

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-to-top = ["{{ cookiecutter.project_module_name }}"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^(build|dist|venv)",
    ".venv/"
]
cache_dir = "/dev/null"

[tool.isort]
profile = "ruff"
known_first_party = ["{{ cookiecutter.project_module_name }}"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard libraries"
import_heading_thirdparty = "3pps"
import_heading_firstparty = "Own modules"
line_length = 88