[build-system]
requires = ["setuptools==80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    {name = "{{ cookiecutter.project_authors }}", email = "{{ cookiecutter.project_authors_email }}"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = "=={{ cookiecutter.project_version_python }}"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python"]
dependencies = []

[tool.uv]
default-groups = "all"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]

[dependency-groups]
pipeline = [
    "bandit==1.8.6",
    "complexipy==3.3.0",
    "mypy==1.17.1",
    "pytest==8.4.1",
    "pytest-order==1.3.0",
    "ruff==0.12.7",
    "isort==6.0.1",
    "nbqa==1.9.1"
]
documentation = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.30.0",
    "mkdocs-material==9.6.16",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-git-authors-plugin==0.10.0",
    "mkdocs-enumerate-headings-plugin==0.6.2",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-awesome-nav==3.1.2",
    "mike==2.1.3"
]

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.project_module_name }}*"]
exclude = ["{{ cookiecutter.project_test_folder_name }}*", "docs*", "*.egg-info*"]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-to-top = ["{{ cookiecutter.project_module_name }}"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^(build|dist|venv)",
    ".venv/"
]
cache_dir = "/dev/null"

[tool.isort]
known_first_party = ["{{ cookiecutter.project_module_name }}"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard libraries"
import_heading_thirdparty = "3pps"
import_heading_firstparty = "Own modules"
line_length = 88