[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    {name = "{{ cookiecutter.project_authors }}", email = "{{ cookiecutter.project_authors_email }}"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">={{ cookiecutter.project_version_python }}"
keywords = ["python"]

[tool.uv]
default-groups = "all"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]
environments = [
    "sys_platform == 'linux'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.uv.build-backend]
module-name = "{{ cookiecutter.project_module_name }}"
module-root = ""

[dependency-groups]
pipeline = [
    "bandit==1.9.4",
    "complexipy==6.0.0",
    "mypy==2.1.0",
    "pytest==9.1.1",
    "ruff==0.15.20",
    "isort==8.0.1",
    "deadcode==2.4.1",
    "pre-commit==4.6.0",
]
documentation = [
    "zensical==0.0.46",
    "mkdocstrings-python==2.0.5",
    "mike @ git+https://github.com/squidfunk/mike.git",
]

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^(build|dist|venv)",
    ".venv/"
]
cache_dir = "/dev/null"

[tool.isort]
profile = "black"
known_first_party = ["{{ cookiecutter.project_module_name }}"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard libraries"
import_heading_thirdparty = "3pps"
import_heading_firstparty = "Own modules"
import_heading_localfolder = "Own modules"
line_length = 88
include_trailing_comma = true
combine_as_imports = true
skip_glob = [".venv/*", ".uv-cache/*"]

[tool.deadcode]
exclude = [".venv", ".uv-cache", "tests"]
